--- a/portfolio_v1/src/App.css
+++ b/portfolio_v1/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&family=Montserrat');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&family=Montserrat&family=Lato');
 
 .App-header {
   background-color: #282c34;
